# telegram_webapp

./: Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: docker.yaml
app/components/: handlers.py
app/utils/: __init__.py  settings.py
